--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,6 @@
-astroid==2.3.1
-colorama==0.4.1
-cycler==0.10.0
-isort==4.3.21
-joblib==0.14.0
-kiwisolver==1.1.0
-lazy-object-proxy==1.4.2
-matplotlib==3.1.1
-mccabe==0.6.1
 numpy==1.17.2
-opencv-python==4.1.1.26
-pycodestyle==2.5.0
-pyparsing==2.4.2
-pypiwin32==223
-python-dateutil==2.8.0
+matplotlib==3.1.1
 pywin32==225
-scikit-learn==0.21.3
-scipy==1.3.1
-six==1.12.0
-sklearn==0.0
-typed-ast==1.4.0
-wrapt==1.11.2
+pandas==0.25.1
+opencv_python==4.1.1.26
+win32gui==221.6
